website/static/css/home.css
.home {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.home-header {
	text-align: center;
}
.home-header img {
	height: 15rem;
}
.friends {
	text-decoration: underline;
	text-decoration-color: red;
}
.home-footer {
	margin: 1rem;
	text-align: center;
}

.home-content {
	background-color: var(--panelColor);
	padding: 1rem;
	max-width: calc(100% - 4rem);
}

.big-button {
	display: inline-block;
	background-color: rgba(0, 0, 0, 0.25);
	font-weight: bold;
	font-size: 2rem;
	padding: 0.5rem;
	margin: 0.5rem;
}

.screenshots {
	text-align: center;
}
.screenshots img {
	max-width: 75%;
	margin-bottom: 0.5rem;
	border: 0.3rem solid rgba(255, 0, 0, 0.25);
}

